[package]
name = "espcam"
version = "0.1.0"
authors = ["Kezi <keziolio123@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"
lto = true

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47", default-features = false }
embedded-svc = "0.26.4"
anyhow = "1.0.79"

bstr = { version = "1.8.0", default-features = false }
esp32-nimble = "0.5.0"
tokio = { version = "*", features = ["rt", "time", "sync","macros"] }
lazy_static = "1.4.0"
uuid = { version = "1.2.2", default-features = false, features = ["macro-diagnostics"] }
rgb565 = "0.1.3"
image = "0.24.8"
frankenstein = { version = "0.30", default-features = false, features = ["telegram-trait"]}
serde = { version = "1", features = ["derive"]}
serde_json = { version = "1"}

idotmatrix = {path = "/home/kezi/progetti_miei/idotmatrix"}
esp-idf-hal = "*"
esp-idf-sys = "*"
thiserror = "1.0.56"

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = "components/esp32-camera"
bindings_header = "components/bindings.h"
bindings_module = "camera"


[build-dependencies]
embuild = "0.31.3"
